--- a/css/style.css
+++ b/css/style.css
@@ -1026,12 +1026,14 @@ h1 {
     background-color: #a49b9b;
     margin: 0;
     padding: 0 60px;
-    justify-content: space-around;
+  }
+  .balicky__txt {
+    text-align: center;
   }
   .cenik__balicky--01,
   .cenik__balicky--02 {
     flex: 1 1 80%;
-    margin: 80px;
+    margin: 40px 80px 80px 80px;
     text-align: center;
   }
   .cenik__balicky--01 img,
@@ -1116,5 +1118,13 @@ h1 {
   .galerie p,
   .cenik p {
     font-size: 20px;
+  }
+  /* --- Galerie --- */
+  .galerie__container img {
+    max-width: 350px;
+    margin-bottom: 10px;
+  }
+  .galerie__container {
+    margin: 80px 160px;
   }
 }/*# sourceMappingURL=style.css.map */
