--- a/css/style.scss
+++ b/css/style.scss
@@ -1292,13 +1292,16 @@ h1 {
             background-color: $border-color;
             margin: 0;
             padding: 0 60px;
-            justify-content: space-around;
+        }
+
+        .balicky__txt {
+            text-align: center;
         }
         
         .cenik__balicky--01,
         .cenik__balicky--02 {
             flex: 1 1 80%;
-            margin: 80px;
+            margin: 40px 80px 80px 80px;
             text-align: center;
         }
         
@@ -1408,6 +1411,17 @@ h1 {
         .galerie p,
         .cenik p {
             font-size: 20px;
+        }
+
+    /* --- Galerie --- */     
+        .galerie__container img {
+            max-width: 350px;
+            margin-bottom: 10px
+            //margin: 0px 150px;
+        }
+
+        .galerie__container {
+            margin: 80px 160px;
         }
 
 }
