--- a/_includes/moje-sablona.njk
+++ b/_includes/moje-sablona.njk
@@ -20,7 +20,9 @@
         <div class="header__content">
             <!--Logo-->       
             <div class="header__logo">
-                <img src="/images/logo-rada.png" alt="Kadeřnictví Vlasy s Ráďou">
+                <a href="/">
+                    <img src="/images/logo-rada.png" alt="Kadeřnictví Vlasy s Ráďou">
+                </a>
             </div>
 
             <!--Menu-->
