--- a/css/style.scss
+++ b/css/style.scss
@@ -830,6 +830,7 @@ h1 {
         .cenik__container {
             max-width: 750px;
             text-align: center;
+            margin: 0 auto;
         }
 
         .cenik__container img {
