--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ h1 {
 .form {
   text-align: center;
   background-color: #a49b9b;
-  padding: 40px;
+  padding: 50px 80px 80px 80px;
 }
 
 .form h2 {
@@ -255,6 +255,38 @@ h1 {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-align: center;
   color: #ffffff;
+}
+
+.form-field {
+  margin-bottom: 10px;
+}
+
+.form-field label {
+  display: block;
+  font-size: 16px;
+  color: #ffffff;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+input,
+textarea {
+  border-radius: 5px;
+  border: 1px solid #a49b9b;
+}
+
+button {
+  display: block;
+  margin-top: 10px;
+  padding: 5px;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+}
+
+.required {
+  color: black;
 }
 
 /* Zápatí */
