--- a/css/style.scss
+++ b/css/style.scss
@@ -310,7 +310,7 @@ h1 {
 .form {
     text-align: center;
     background-color: $border-color;
-    padding: 40px;
+    padding: 50px 80px 80px 80px;
 }
 
 .form h2 {
@@ -321,6 +321,39 @@ h1 {
     color: $text-color1;
 }
 
+.form-field {
+    margin-bottom: 10px;
+}
+
+.form-field label {
+    display: block;
+    font-size: 16px;
+    color: $text-color1;
+    font-family: $font-h;
+}
+
+input,
+textarea {
+    border-radius: 5px;
+    border: 1px solid #a49b9b;
+}
+
+button {
+    display: block;
+    margin-top: 10px;
+    padding: 5px;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+
+}
+
+.required {
+    color: black;
+
+}
 
 
 
